# openclaw-webhook-bridge

./: .env.example  .gitignore  README.md  bridge.py  pyproject.toml
scripts/: handle_request.sh  handle_request_openclaw.sh
