[project]
name = "openclaw-webhook-bridge"
version = "0.1.1"
description = "Two-way HTTP webhook bridge for isolated OpenClaw instances"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",
]

[tool.uv]
package = false
